[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://art/hud_heartFull.png" type="Texture" id=3]
[ext_resource path="res://ReviewWindow.gd" type="Script" id=4]
[ext_resource path="res://SubmitButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -239.0
margin_top = -1.0
margin_right = 240.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -118.0
margin_right = 243.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the creeps."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = 58.0
margin_right = 84.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HeartContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -115.0
margin_right = 240.0
margin_bottom = -70.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="HeartContainer"]
margin_left = 156.0
margin_right = 209.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="Heart2" type="TextureRect" parent="HeartContainer"]
margin_left = 213.0
margin_right = 266.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="Heart3" type="TextureRect" parent="HeartContainer"]
margin_left = 270.0
margin_right = 323.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="ReviewWindow" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -197.0
margin_right = 171.0
margin_bottom = 185.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReviewsLabel" type="Label" parent="ReviewWindow"]
margin_right = 350.0
margin_bottom = 14.0
text = "Reviews"

[node name="ReviewsTextBox" type="TextEdit" parent="ReviewWindow"]
margin_top = 18.0
margin_right = 350.0
margin_bottom = 177.0
size_flags_vertical = 3

[node name="CommentLabel" type="Label" parent="ReviewWindow"]
margin_top = 181.0
margin_right = 350.0
margin_bottom = 195.0
text = "Leave a comment:"

[node name="CommentTextBox" type="TextEdit" parent="ReviewWindow"]
margin_top = 199.0
margin_right = 350.0
margin_bottom = 358.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ReviewWindow"]
margin_top = 362.0
margin_right = 350.0
margin_bottom = 382.0

[node name="SubmitButton" type="Button" parent="ReviewWindow/HBoxContainer"]
margin_right = 173.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Submit"
script = ExtResource( 5 )

[node name="BackButton" type="Button" parent="ReviewWindow/HBoxContainer"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back"

[node name="ReviewButton" type="Button" parent="."]
margin_left = 78.0
margin_top = 583.0
margin_right = 403.0
margin_bottom = 648.0
custom_fonts/font = SubResource( 3 )
text = "Reviews"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="ReviewWindow/HBoxContainer/SubmitButton" to="ReviewWindow" method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="ReviewWindow/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ReviewButton" to="." method="_on_ReviewButton_pressed"]
